# scribe

./: .build.fecl  .buildinfo.fer  .gitignore  CMakeLists.txt  LICENSE  README.md  TODO.md  Thoughts.md  codecov.sh  coolSyntax.sc  irspec.sc  irspec2.sc  primdecl.fer  primdef.fer  test.sc  testConverter.sc
TODO/: 1.sc
error_examples/: README.md  compile_error.sc  ioprintf.sc  variadicfunc.sc
examples/: argparse.sc  arith.sc  array.sc  callback.sc  compiler_vars.sc  comptime_import.sc  comptime_struct.sc  conditional_import.sc  config.fecl  cross_ref_struct.sc  enum.sc  file_read.sc  file_write.sc  fileio.sc  hello_world.sc  import.sc  inline_for.sc  inline_if.sc  io.sc  leonardo.sc  linked_list.sc  list.sc  logger.sc  loop_allocate.sc  map.sc  n_add.sc  numbers.sc  os.sc  os_exec_multithread.sc  os_get_exe_path.sc  prelude.sc  println.sc  recursive_facto.sc  return_any.sc  self_structs.sc  sort_cstr.sc  sort_int.sc  spiralarray.sc  stat.sc  str_subscr.sc  (+13 more)
examples/TODO/: 2.sc
examples/error_examples/: ioprintf.sc
headers/: core.sc
headers/prelude/: core.sc  stringref.sc
headers/std/: argparse.sc  builder.sc  c.sc  core.sc  err.sc  fs.sc  io.sc  iter.sc  linked_list.sc  list.sc  logger.sc  map.sc  mem.sc  mutex.sc  os.sc  sorting.sc  string.sc  thread.sc  unistd.sc  utils.sc  vec.sc
headers/std/c/: grp.sc  ioctl.sc  stat.sc  time.sc  types.sc  unistd.sc
include/: Args.hpp  Builder.hpp  Config.hpp.in  Config.inl.in  Context.hpp  Core.hpp  DeferStack.hpp  DeferredSpecialize.hpp  Env.hpp  Error.hpp  FS.hpp  IR.hpp  Intrinsics.hpp  Lex.hpp  Logger.hpp  Parser.hpp  PrimitiveTypeFuncs.hpp  ScopeMgr.hpp  TreeIO.hpp  TypeMgr.hpp  Types.hpp  Utils.hpp  ValueMgr.hpp  Values.hpp
include/AST/: DeferStack.hpp  Parse.hpp  ParseHelper.hpp  Stmts.hpp
include/AST/Passes/: Base.hpp  ConstFold.hpp  IRGen.hpp
include/CodeGen/: Base.hpp  C.hpp  Writer.hpp
include/CodeGen/C/: Prelude.hpp
include/Compiler/: CompilerContext.hpp  Context.hpp  Lex.hpp  Parser.hpp  TreeIO.hpp
include/Compiler/AST/: DeferStack.hpp  Parse.hpp  ParseHelper.hpp  Parser.hpp  Stmts.hpp
include/Compiler/AST/Passes/: Base.hpp  IRGen.hpp
include/Core/: Allocator.hpp  Args.hpp  Core.hpp.in  Env.hpp  Error.hpp  FS.hpp  Logger.hpp  Utils.hpp
include/IR/: Value.hpp
include/Intrinsics/: Core.def  Primitive.def
include/Parser/: Parse.hpp  ParseHelper.hpp  Stmts.hpp
include/Passes/: Base.hpp  Cleanup.hpp  Simplify.hpp  TypeAssign.hpp  ValueAssign.hpp
include/VM/: IRBuilder.hpp  Instructions.hpp  VMContext.hpp  Values.hpp
irspec/: enum.sc  extern.sc  func.sc  if.sc  loop.sc  struct.sc
lib/prelude/: core.sc
lib/std/: argparse.sc  builder.sc  err.sc  hashing.sc  list.sc  mem.sc
lib/std/c/: dirent.sc  pwd.sc  types.sc
src/: Args.cpp  Context.cpp  DeferStack.cpp  DeferredSpecialize.cpp  Env.cpp  Error.cpp  FS.cpp  Lex.cpp  Main.cpp  Parser.cpp  PrimitiveFuncs.cpp  PrimitiveTypeFuncs.cpp  ScopeMgr.cpp  TreeIO.cpp  TypeMgr.cpp  Types.cpp  Utils.cpp  ValueMgr.cpp  Values.cpp
src/AST/: DeferStack.cpp  Parse.cpp  ParserHelper.cpp  StmtClone.cpp  Stmts.cpp
src/AST/Passes/: Base.cpp  ConstFold.cpp  IRGen.cpp
src/CodeGen/: Base.cpp  C.cpp  Writer.cpp
src/Compiler/: CompilerContext.cpp  Context.cpp  Lex.cpp  Main.cpp  Parser.cpp  TreeIO.cpp
src/Compiler/AST/: DeferStack.cpp  Parse.cpp  Parser.cpp  ParserHelper.cpp  StmtClone.cpp  Stmts.cpp
src/Compiler/AST/Passes/: Base.cpp  IRGen.cpp
src/Core/: Allocator.cpp  Args.cpp  Env.cpp  Error.cpp  FS.cpp  Logger.cpp  Utils.cpp
src/Intrinsics/: Core.cpp  Primitive.cpp
src/Parser/: ClearValue.cpp  Parse.cpp  ParserHelper.cpp  SetFuncUsed.cpp  StmtClone.cpp  Stmts.cpp
src/Passes/: Base.cpp  Cleanup.cpp  Simplify.cpp  TypeAssign.cpp  ValueAssign.cpp
src/VM/: IRBuilder.cpp  Instructions.cpp  Main.cpp  VMContext.cpp  Values.cpp
thoughts/: attributeList.txt  attributes.sc  coolSyntax.sc  errorhandling.sc
utils/: primdef.fer
